<resources  xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false" tools:ignore="MissingTranslation">FA Downloader</string>
    <string name="repeat">Repeat</string>
    <string name="once">Once</string>
    <string name="stop">Stop</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="request">Request</string>
    <string name="dot_dot">…</string>
    <string name="question">\?</string>
    <string name="setting">Setting</string>
    <string name="other">Other</string>
    <string name="log">Log</string>
    <string name="log_clear">clear log</string>
    <string name="download_record">Download record</string>
    <string name="download_record_clear">clear download record</string>
    <string name="target_type">Target Type</string>
    <string name="target_type_help" translatable="false">Target Type には機器の種別を指定してください\n
\n
FlashAir APモードはFlashAirのAPにスマホを接続する場合に使います\n
このモードではWi-Fi AP半強制機能を利用可能です\n
\n
FlashAir STAモードはスマホのテザリング機能を有効にして、FlashAirを子機として接続する場合に使います。\n
(スマホとFlashAir カードの無線LAN設定は別途行ってください)\n
FADownloaderはテザリング内部のLANにUDPパケットをばらまいた後にARPテーブルを参照することで、FlashAirカードのIPアドレスを自動的に検出します。</string>
    <string name="target_type_flashair_ap">FlashAir APモード</string>
    <string name="target_type_flashair_sta">FlashAir STAモード</string>
    <string name="target_type_pentax_kp" translatable="false">Pentax KP等</string>
    <string name="target_type_invalid">target type invalid.</string>
    <string name="target_url">Target URL</string>
    <string name="target_url_help" translatable="false">Target URL にはアクセス対象のURLを指定してください。
\n\nTarget TypeごとにURLは保存されます。
\n\nFlashAir APモードの場合、デフォルトは「http://flashair/」です。
\n末尾の/は必須です。サブフォルダを指定してもうまく動きません。

\n\nFlashAir STAモードの場合、デフォルトは「http://flashair/」ですが、このままだと指定は無視されます。「http://(IPv4アドレス)/」を指定した場合はそのアドレスを優先的に確認します。
\n末尾の/は必須です。サブフォルダを指定してもうまく動きません。

\n\nPentax KPの場合、デフォルトは「http://192.168.0.1/」です。
\n末尾の/は必須です。サブフォルダを指定してもうまく動きません。
\n※ Pentax機と接続する際は「モバイルデータ接続」をOFFにすることをオススメします。
</string>
    <string name="target_url_not_ok">please specify Target URL.</string>
    <string name="local_folder">Local Folder</string>
    <string name="local_folder_help_text1" translatable="false">Local Folder にはスマホ上の、画像をダウンロードして保存するフォルダを指定します</string>
    <string name="local_folder_help_text2" translatable="false">「…」ボタンを押しても最初は「最近」しか選べません。\n右上のメニューから「内部ストレージを表示」を指定してください。</string>
    <string name="local_folder_help_text3" translatable="false">左のサイドメニューからストレージを選んでください</string>
    <string name="local_folder_help_text4" translatable="false">右上のメニューから「新しいフォルダ」を選んで、このアプリ用のフォルダを作成しましょう。\nフォルダの名前は何でも構いません。「FADownloader」などが無難です。\n</string>
    <string name="local_folder_help_text5" translatable="false">作成したフォルダを開いた後、右下の「適用」ボタンを押してください</string>
    <string name="local_folder_not_ok">please specify Local Folder.</string>
    <string name="not_selected">(not selected)</string>
    <string name="screen_shot">ScreenShot</string>
    <string name="file_type">File Type</string>
    <string name="file_type_help" translatable="false">File type には、転送するファイルの拡張子を指定します。\n空白で区切って複数書けます。\n* はワイルドカードとして解釈されます。\nデフォルトは「.jp*」です</string>
    <string name="file_type_empty">missing file type.</string>
    <string name="repeat_interval">Repeat Interval</string>
    <string name="repeat_interval_help_text" translatable="false">Repeat IntervalにはREPEAT時の巡回間隔を秒数で指定します。
\nデフォルトは30です。
\nTarget TypeがFlashAirの場合、カード側の無線LANタイムアウト(デフォルト300秒)未満の秒数を指定することをオススメします。
\nTarget TypeがPentax KPの場合、WebSocket経由でカメラの更新状況が伝わるため、この数字は大きめでも問題ありません</string>
    <string name="repeat_interval_not_ok">please specify Repeat Interval as integer greater than 0.</string>
    <string name="app_permission_required">app permission required</string>
    <string name="help_mode_text1" translatable="false">REPEATを押すと転送サービスを開始し、ダウンロードを定期的に行います。\n押した直後は必ずフォルダ階層を全てスキャンします。\n2回目以降はスキャンの前にまずFlashAirカードのアップデートステータスを確認して、更新があった場合のみフォルダ階層をスキャンします。\nREPEAT状態の間は、端末再起動時に転送サービスを自動的に開始します。</string>
    <string name="help_mode_text2" translatable="false">ONCEを押すと転送サービスを開始し、ダウンロードを1回だけ行います。\nフォルダ階層を全てスキャンし終えたら転送サービスは自動的に終了します。</string>
    <string name="help_mode_text3" translatable="false">STOPを押すと転送サービスを終了します。\n実行中の転送処理は中断されます。\nバッテリー消費を軽減するため、使わない時はサービスを停止させましょう。</string>
    <string name="service_start">service start.</string>
    <string name="service_idle">service idle</string>
    <string name="service_end">service stopped</string>
    <string name="broadcast_received">broadcast received: %1$s</string>
    <string name="manual_restart">manual restart</string>
    <string name="unsupported_intent_received">unsupported intent received. action=%1$s</string>
    <string name="thread_running">thread running</string>
    <string name="service_not_running">service not running. press REPEAT or ONCE to start.</string>
    <string name="service_running">service running.</string>
    <string name="thread_not_running_status">thread not running. maybe start when Wi-Fi state changed, or alarm resumed.</string>
    <string name="thread_ctor_params">thread created with parameter.</string>
    <string name="thread_ctor_restart">thread restart. event=%1$s</string>
    <string name="file_type_parse_error">file type parse error. %1$s %2$s %3$s</string>
    <string name="thread_cancelled">thread cancelled. reason:%1$s</string>
    <string name="folder_create">%1$s folder create</string>
    <string name="folder_create_failed">folder create failed.</string>
    <string name="file_create_failed">file create failed.</string>
    <string name="thread_start">thread start</string>
    <string name="wait_short">wait short time. remain=%1$s</string>
    <string name="wait_alarm">wait for alarm. remain=%1$s</string>
    <string name="network_check">network check</string>
    <string name="no_ap_associated">AP not associated.</string>
    <string name="flashair_update_status_check">FlashAir update check</string>
    <string name="flashair_update_check_failed">FlashAir update check failed. %1$s %2$s</string>
    <string name="flashair_not_updated">FlashAir is not updated.</string>
    <string name="flashair_update_status_error">FlashAir update status data error</string>
    <string name="target_host_error">could not resolve target host. perhaps:device\'s Wi-Fi is not connected to target\'s Wi-Fi AP</string>
    <string name="target_host_error_short">missing target host.</string>
    <string name="file_scan_completed">file scan completed.</string>
    <string name="repeat_off">not repeat</string>
    <string name="progress_folder">FOLDER %1$s</string>
    <string name="folder_list_failed">file listing failed. %1$s %2$s %3$s</string>
    <string name="download_file">DOWNLOADING: %1$s</string>
    <string name="thread_end">thread stopped</string>
    <string name="resolution_request_failed">resolution request failed.</string>
    <string name="geo_tagging_mode">GeoTagging Mode</string>
    <string name="geo_tagging_mode_help">GeoTagging Modeを設定すると、スマホから位置情報を取得してJPEGファイルのEXIF情報に位置データを付与します。\nサービス起動中はずっと位置情報を要求し続けます。\n位置精度が高いモードほどバッテリー消費が大きいことに注意してください。\n\nGoogle Play サービスの位置情報APIを利用しているため、Playサービスのない端末では位置情報の埋め込みは使えません。</string>
    <string name="location_interval_desired">location update interval(desired)</string>
    <string name="location_interval_min">location update interval(min)</string>
    <string name="location_interval_min_help">location interval min には位置情報を更新する時間間隔の最低値を秒数で指定します。\n少ない数字ほど位置情報の精度は良くなりますが、バッテリー消費も大きくなります。</string>
    <string name="location_interval_desired_help">location interval desired には位置情報を更新する時間間隔の希望値を秒数で指定します。\n短い方が位置情報の精度は良くなりますが、バッテリー消費は大きくなります。\n\n端末やPlayサービスにより調整が行われるため、希望通りの時間間隔になるとは限りません。\n</string>
    <string name="location_setting_change_unavailable">location setting change unavailable</string>
    <string name="location_setting_returns_unknown_status">location setting returns unknown status %1$d</string>
    <string name="location_update_request_result">location update request failed.</string>
    <string name="location_mode_0">OFF</string>
    <string name="location_mode_1">電力消費最低</string>
    <string name="location_mode_2">電力消費低</string>
    <string name="location_mode_3">バランス</string>
    <string name="location_mode_4">高精度</string>
    <string name="location_mode_invalid">invalid GeoTagging Mode</string>
    <string name="location_update_interval_not_ok">location update interval not OK</string>
    <string name="location_changed">location changed. location.time=%1$s</string>
    <string name="location_last_known">location last known. location.time=%1$s</string>
    <string name="location_update_start">location update start.</string>
    <string name="oss_license_info">OSS license information</string>
    <string name="oss_license_long_help">このアプリは sephiroth74氏の Android-Exif-Extended ライブラリを(SAF対応のために少し改造して)使用しています。\nhttps://github.com/sephiroth74/Android-Exif-Extended\nThis software is licensed under the Apache 2 license, quoted below.\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\nhttp://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n</string>
    <string name="location_update_end">location update end</string>
    <string name="setting_desc">変更した設定はREPEAT/ONCEを押すと反映されます</string>
    <string name="remove_ad">remove ad</string>
    <string name="force_wifi_ap">Force Wi-Fi AP</string>
    <string name="force_wifi_help">Enables this option and input SSID of target SD-LAN card, then this app try to force use specified SSID.\n・Enables Wi-Fi if disabled.\n・Start Wi-Fi scan if missing target SSID is not found in scan result.\n・Select specified SSID if it is found in scan result, but it is not selected.\n\nnotice: this option may waste battery while target AP is not available.</string>
    <string name="wifi_ap_ssid">Wi-Fi AP SSID</string>
    <string name="wifi_ap_ssid_help">This setting is pair with \"Force Wi-Fi AP\".\nPlease input SSID of target SD-LAN card. then this app try to force use specified SSID.</string>
    <string name="ssid_empty">SSID is empty.</string>
    <string name="not_enabled">無効</string>
    <string name="wifi_target_ssid_not_found">Wi-Fi AP %1$s is not configured.</string>
    <string name="wifi_target_ssid_not_scanned">Wi-Fi SSID %1$s not in scan result.</string>
    <string name="folder_name">folder name</string>
    <string name="thumbnail_auto_rotate">auto rotate thumbnails</string>
    <string name="copy_before_view_send">copy before view/send</string>
    <string name="seconds_hint">second(s)</string>
    <string name="protected_only">skip non-protected file</string>
    <string name="skip_already_downloaded">Skip file name match in download record</string>
    <string name="target_url_hint">URL of target SD card.</string>
    <string name="file_type_hint">space separated list of file extension(s).</string>
    <string name="wifi_ap_ssid_hint">Wi-Fi SSID of SD card</string>
    <string name="folder_name_hint">folder name</string>
    <string name="tether_spray_interval">UDP spray interval (tethering mode)</string>
    <string name="tether_test_connection_timeout">Test connection timeout(tethering mode)</string>
    <string name="wifi_scan_interval">Wi-Fi scan interval (force Wi-Fi AP mode)</string>
    <string name="wifi_scan_warning">Android 8 or later have limitation about wifi scan frequency. (see \"?\")</string>
    <string name="wifi_change_ap_interval">Wi-Fi change AP interval (force Wi-Fi AP mode)</string>
    <string name="stop_when_tethering_off">Stop when tethering off</string>
</resources>