<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/local_folder_help_text1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_folder_help_text2"
            />

        <ImageView
            android:layout_width="213dp"
            android:layout_height="213dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/screen_shot"
            android:scaleType="fitCenter"
            android:src="@drawable/help_saf_1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_folder_help_text3"
            />

        <ImageView
            android:layout_width="213dp"
            android:layout_height="213dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/screen_shot"
            android:scaleType="fitCenter"
            android:src="@drawable/help_saf_2"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_folder_help_text4"
            />

        <ImageView
            android:layout_width="213dp"
            android:layout_height="213dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/screen_shot"
            android:scaleType="fitCenter"
            android:src="@drawable/help_saf_3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_folder_help_text5"
            />

        <ImageView
            android:layout_width="213dp"
            android:layout_height="213dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/screen_shot"
            android:scaleType="fitCenter"
            android:src="@drawable/help_saf_4"
            />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            />
    </LinearLayout>
</ScrollView>