<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:scrollbarStyle="outsideOverlay"
    tools:ignore="TooManyViews"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:text="@string/target_type"
            />

        <LinearLayout style="@style/setting_row_form">

            <Spinner
                android:id="@+id/spTargetType"
                style="@style/setting_horizontal_stretch"
                />

            <Button
                android:id="@+id/btnTargetTypeHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:labelFor="@+id/etTargetUrl"
            android:text="@string/target_url"
            />

        <LinearLayout style="@style/setting_row_form">

            <EditText
                android:id="@+id/etTargetUrl"
                style="@style/setting_edit_text"
                android:inputType="textUri"
                android:hint="@string/target_url_hint"
                />

            <Button
                android:id="@+id/btnHelpTargetUrl"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:text="@string/local_folder"
            />

        <LinearLayout style="@style/setting_row_form">

            <TextView
                android:id="@+id/tvFolder"
                style="@style/setting_horizontal_stretch"
                android:ellipsize="start"
                />

            <Button
                android:id="@+id/btnFolderPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="32dp"
                android:text="@string/dot_dot"
                />

            <Button
                android:id="@+id/btnHelpFolderPicker"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:labelFor="@+id/etFileType"
            android:text="@string/file_type"
            />

        <LinearLayout style="@style/setting_row_form">

            <EditText
                android:id="@+id/etFileType"
                style="@style/setting_edit_text"
                android:inputType="text"
                android:hint="@string/file_type_hint"
                />

            <Button
                android:id="@+id/btnFileTypeHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:text="@string/protected_only"
            />

        <LinearLayout style="@style/setting_row_form">

            <Switch
                android:id="@+id/swProtectedOnly"
                style="@style/setting_horizontal_stretch"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btnHelpProtectedOnly"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:text="@string/skip_already_downloaded"
            />

        <LinearLayout style="@style/setting_row_form">

            <Switch
                android:id="@+id/swSkipAlreadyDownload"
                style="@style/setting_horizontal_stretch"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btnHelpSkipAlreadyDownload"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:labelFor="@+id/etRepeatInterval"
            android:text="@string/repeat_interval"
            />

        <LinearLayout style="@style/setting_row_form">

            <EditText
                android:id="@+id/etRepeatInterval"
                style="@style/setting_edit_text"
                android:inputType="number"
                android:hint="@string/seconds_hint"
                />

            <Button
                android:id="@+id/btnIntervalHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:text="@string/geo_tagging_mode"
            />

        <LinearLayout style="@style/setting_row_form">

            <Spinner
                android:id="@+id/spLocationMode"
                style="@style/setting_horizontal_stretch"
                />

            <Button
                android:id="@+id/btnLocationModeHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:text="@string/force_wifi_ap"
            />

        <LinearLayout style="@style/setting_row_form">

            <Switch
                android:id="@+id/swForceWifi"
                style="@style/setting_horizontal_stretch"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btnForceWifiHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:labelFor="@+id/etSSID"
            android:text="@string/wifi_ap_ssid"
            />

        <LinearLayout style="@style/setting_row_form">

            <EditText
                android:id="@+id/etSSID"
                style="@style/setting_edit_text"
                android:inputType="text"
                android:hint="@string/wifi_ap_ssid_hint"
                />

            <Button
                android:id="@+id/btnSSIDPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="32dp"
                android:text="@string/dot_dot"
                />

            <Button
                android:id="@+id/btnSSIDHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:text="@string/stop_when_tethering_off"
            />

        <LinearLayout style="@style/setting_row_form">

            <Switch
                android:id="@+id/swStopWhenTetheringOff"
                style="@style/setting_horizontal_stretch"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btnStopWhenTetheringOffHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:text="@string/thumbnail_auto_rotate"
            />

        <LinearLayout style="@style/setting_row_form">

            <Switch
                android:id="@+id/swThumbnailAutoRotate"
                style="@style/setting_horizontal_stretch"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btnThumbnailAutoRotateHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:text="@string/copy_before_view_send"
            />

        <LinearLayout style="@style/setting_row_form">

            <Switch
                android:id="@+id/swCopyBeforeViewSend"
                style="@style/setting_horizontal_stretch"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btnCopyBeforeViewSendHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:labelFor="@+id/etLocationIntervalDesired"
            android:text="@string/location_interval_desired"
            />

        <LinearLayout style="@style/setting_row_form">

            <EditText
                android:id="@+id/etLocationIntervalDesired"
                style="@style/setting_edit_text"
                android:inputType="number"
                android:hint="@string/seconds_hint"
                />

            <Button
                android:id="@+id/btnLocationIntervalDesiredHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:labelFor="@+id/etLocationIntervalMin"
            android:text="@string/location_interval_min"
            />

        <LinearLayout style="@style/setting_row_form">

            <EditText
                android:id="@+id/etLocationIntervalMin"
                style="@style/setting_edit_text"
                android:inputType="number"
                android:hint="@string/seconds_hint"
                />

            <Button
                android:id="@+id/btnLocationIntervalMinHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:labelFor="@+id/etTetherSprayInterval"
            android:text="@string/tether_spray_interval"
            />

        <LinearLayout style="@style/setting_row_form">

            <EditText
                android:id="@+id/etTetherSprayInterval"
                style="@style/setting_edit_text"
                android:inputType="number"
                android:hint="@string/seconds_hint"
                />

            <Button
                android:id="@+id/btnTetherSprayIntervalHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>


        <TextView
            style="@style/setting_row_label"
            android:labelFor="@+id/etTetherTestConnectionTimeout"
            android:text="@string/tether_test_connection_timeout"
            />

        <LinearLayout style="@style/setting_row_form">

            <EditText
                android:id="@+id/etTetherTestConnectionTimeout"
                style="@style/setting_edit_text"
                android:inputType="number"
                android:hint="@string/seconds_hint"
                />

            <Button
                android:id="@+id/btnTetherTestConnectionTimeoutHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:labelFor="@+id/etWifiScanInterval"
            android:text="@string/wifi_scan_interval"
            />

        <LinearLayout style="@style/setting_row_form">

            <EditText
                android:id="@+id/etWifiScanInterval"
                style="@style/setting_edit_text"
                android:inputType="number"
                android:hint="@string/seconds_hint"
                />

            <Button
                android:id="@+id/btnWifiScanIntervalHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <TextView style="@style/setting_row_form"
            android:id="@+id/tvWifiScanInterval"
            android:text="@string/wifi_scan_warning"
            android:textColor="#f80"
            />

        <View style="@style/setting_divider"/>

        <TextView
            style="@style/setting_row_label"
            android:labelFor="@+id/etWifiChangeApInterval"
            android:text="@string/wifi_change_ap_interval"
            />

        <LinearLayout style="@style/setting_row_form">

            <EditText
                android:id="@+id/etWifiChangeApInterval"
                style="@style/setting_edit_text"
                android:inputType="number"
                android:hint="@string/seconds_hint"
                />

            <Button
                android:id="@+id/btnWifiChangeApIntervalHelp"
                style="@style/setting_row_help"
                />
        </LinearLayout>

        <View style="@style/setting_divider"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/setting_desc"
            />

        <View style="@style/setting_divider"/>


    </LinearLayout>
</ScrollView>